[TASK] #1191 - fix some translation in templates

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.19.2
+    2016-07-19
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1191: fix some translation in templates
+
 0.19.1
     2016-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
