--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -445,6 +445,12 @@
             <trans-unit id="tx_cart_domain_model_product_coupon.code">
                 <source>Code</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_coupon.coupon_type">
+                <source>Type</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_coupon.coupon_type.cartdiscount">
+                <source>Cart Discount</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_coupon.is_relative_discount">
                 <source>Is Relative Discount</source>
             </trans-unit>
