[TASK] #1195 - add some documentation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.20.1
+    2016-07-21
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1195: add some documentation
+
 0.20.0
     2016-07-19
     Daniel Lorenz <daniel.lorenz@extco.de>
