--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.21.1
+    2016-07-21
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1207: adding travis.yml file
+
 0.21.0
     2016-07-21
     Daniel Lorenz <daniel.lorenz@extco.de>
