--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.22.0
+    2016-07-26
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1208: preparation for CartPdf
+
 0.21.1
     2016-07-21
     Daniel Lorenz <daniel.lorenz@extco.de>
