--- a/Documentation/Misc/Changelog/0.21.0.rst
+++ b/Documentation/Misc/Changelog/0.21.0.rst
@@ -9,5 +9,5 @@
 Diese Version behebt einen Fehler bei der Anzeige von Produkten mit Varianten im Warenkorb und beim Speichern der Bestellungen. Es wird nun der vollständige Name aus dem Titel und den Varianten gespeichert.
 
 .. IMPORTANT::
-   * Diese Version ändert das Spreichern. Bisherige Produkte in den Bestellungen bleiben von dieser Änderung unberührt.
+   * Diese Version ändert das Speichern. Bisherige Produkte in den Bestellungen bleiben von dieser Änderung unberührt.
    * Die Methode *getSku()* der Backendvariante im Warenkorb liefert nun lediglich den Wert der Variable. Um die komplett generierte Artikelnummer der Variante zu bekommen wurde die Methode *getCompleteSku()* eingeführt. Dies muss in den eigenen Templates berücksichtigt werden.
