[TASK] #1212 - remove order_pdf and invoice_pdf for release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.23.1
+    2016-08-12
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1212: remove order_pdf and invoice_pdf for release
+
 0.23.0
     2016-08-01
     Daniel Lorenz <daniel.lorenz@extco.de>
