[TASK] 1213 - remove default and foundation templates and add bootstrap as default template

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+0.24.0
+    2016-08-12
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1203: join default, bootstrap and foundation templates
+
+
 0.23.1
     2016-08-12
     Daniel Lorenz <daniel.lorenz@extco.de>
