--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -33,6 +33,10 @@
                 <source>Thank you for your order.</source>
                 <target>Vielen Dank für Ihre Bestellung.</target>
             </trans-unit>
+            <trans-unit id="tx_cart.mail.thank_you_for_order_note">
+                <source>Below is an overview of all important information about your order.</source>
+                <target>Nachfolgend finden Sie eine Übersicht mit allen wichtigen Informationen zu Ihrer Bestellung.</target>
+            </trans-unit>
             <trans-unit id="tx_cart.mail.order_information">
                 <source>Order Information</source>
                 <target>Bestellinformation</target>
