--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -26,6 +26,9 @@
             <trans-unit id="tx_cart.mail.thank_you_for_order">
                 <source>Thank you for your order.</source>
             </trans-unit>
+            <trans-unit id="tx_cart.mail.thank_you_for_order_note">
+                <source>Below is an overview of all important information about your order.</source>
+            </trans-unit>
             <trans-unit id="tx_cart.mail.order_information">
                 <source>Order Information</source>
             </trans-unit>
