[TASK] #1220 - release cart

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.0.0
+    2016-08-16
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1220: release cart
+
 0.25.0
     2016-08-16
     Daniel Lorenz <daniel.lorenz@extco.de>
