--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -423,6 +423,10 @@
                 <source>Thank you for your order.</source>
                 <target>Vielen Dank für Ihre Bestellung.</target>
             </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.order_cart.thank_you_order_number">
+                <source>Your order number is: %1$s</source>
+                <target>Ihre Bestellnummer lautet: %1$s</target>
+            </trans-unit>
 
             <trans-unit id="tx_cart.module.productController.listAction.header">
                 <target>Produkt - Liste</target>
