--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.1.1
+    2016-08-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUG #77544: problem with file reference declaration problem on php7
+
 1.1.0
     2016-08-18
     Daniel Lorenz <daniel.lorenz@extco.de>
