--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.1.2
+    2016-08-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUG #7: cart count was not updated after changing the amount of items in bask
+
 1.1.1
     2016-08-18
     Daniel Lorenz <daniel.lorenz@extco.de>
