--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,12 @@
 1.1.2
-    2016-08-18
+    2016-08-24
+    BoBaH83 <https://github.com/BoBaH83>
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * BUG #7: cart count was not updated after changing the amount of items in bask
 
 1.1.1
-    2016-08-18
+    2016-08-23
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * BUG #77544: problem with file reference declaration problem on php7
