--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.1.3
+    2016-08-24
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUG #6: problem with the basket
+
 1.1.2
     2016-08-24
     BoBaH83 <https://github.com/BoBaH83>
