--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.1.4
+    2016-08-29
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1223: some little fixes and improvements
+
 1.1.3
     2016-08-24
     Daniel Lorenz <daniel.lorenz@extco.de>
