--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -159,13 +159,13 @@
                 <source>Additional Data</source>
                 <target>Zusätzliche Daten</target>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_item.order_pdf">
-                <source>Order PDF</source>
-                <target>Bestell PDF</target>
+            <trans-unit id="tx_cart_domain_model_order_item.order_pdfs">
+                <source>Order PDFs</source>
+                <target>Bestell PDFs</target>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_item.invoice_pdf">
-                <source>Invoice PDF</source>
-                <target>Rechnung PDF</target>
+            <trans-unit id="tx_cart_domain_model_order_item.invoice_pdfs">
+                <source>Invoice PDFs</source>
+                <target>Rechnung PDFs</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_item.tax">
                 <source>Tax</source>
