--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -131,11 +131,11 @@
             <trans-unit id="tx_cart_domain_model_order_item.additional_data">
                 <source>Additional Data</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_item.order_pdf">
-                <source>Order PDF</source>
+            <trans-unit id="tx_cart_domain_model_order_item.order_pdfs">
+                <source>Order PDFs</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_item.invoice_pdf">
-                <source>Invoice PDF</source>
+            <trans-unit id="tx_cart_domain_model_order_item.invoice_pdfs">
+                <source>Invoice PDFs</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_item.tax">
                 <source>Tax</source>
