[TASK] #1230 - add required checkbox to frontend variant

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -992,7 +992,12 @@
             </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_product_fevariant">
+                <source>Frontend Variant</source>
                 <target>Frontend Variante</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_fevariant.is_required">
+                <source>is Required</source>
+                <target>Pflichtfeld</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_fevariant.sku">
                 <source>SKU</source>
