--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.2.0
+    2016-09-06
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1230: add required checkbox to frontend variant
+
 1.1.5
     2016-09-02
     Daniel Lorenz <daniel.lorenz@extco.de>
