--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.2.1
+    2016-09-20
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #4: graded (by quantity) shipping costs can be used
+
 1.2.0
     2016-09-06
     Daniel Lorenz <daniel.lorenz@extco.de>
