--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+1.2.2
+    2016-09-20
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #13: implements a deprecated method in OrderItemValidator
+
 1.2.1
     2016-09-20
     Daniel Lorenz <daniel.lorenz@extco.de>
 
-    * BUGFIX #4: graded (by quantity) shipping costs can be used
+    * BUGFIX #12: graded (by quantity) shipping costs can be used
 
 1.2.0
     2016-09-06
