--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
+1.3.0
+    2016-09-29
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #17: generalize PDF generator actions
+    * TASK #20: add delivery note number, date and pdf file references
+    * TASK #21: add function to generate PDF documents after order
+    * TASK #22: add configuration to add generated PDF documents to mail
+
 1.2.4
     2016-09-28
     Daniel Lorenz <daniel.lorenz@extco.de>
+
     * BUGFIX #18: show prices for payment and shipping of an order in backend modul
     * BUGFIX #19: replace action link to list with history.back() in product detail view
 
