--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.3.1
+    2016-10-06
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #23: validation error for acceptTerms and acceptConditions shows errorAction flash Message
+
 1.3.0
     2016-09-29
     Daniel Lorenz <daniel.lorenz@extco.de>
