--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -214,6 +214,10 @@
                 <source>back</source>
             </trans-unit>
 
+            <trans-unit id="tx_cart.error.validation">
+                <source>A validation error has occurred.</source>
+            </trans-unit>
+
             <trans-unit id="tx_cart.controller.order.actions">
                 <source>Actions</source>
             </trans-unit>
