--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.3.2
+    2016-10-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #25: add some alert classes
+
 1.3.1
     2016-10-06
     Daniel Lorenz <daniel.lorenz@extco.de>
