--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
+1.3.3
+    2016-10-19
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #26: add some javascript message when product was added to cart by ajax request
+
 1.3.2
-    2016-10-18
+    2016-10-19
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #25: add some alert classes
