--- a/Documentation/Misc/Changelog/1.4.0.rst
+++ b/Documentation/Misc/Changelog/1.4.0.rst
@@ -3,10 +3,10 @@
 .. --------------------------------------------------
 .. -*- coding: utf-8 -*- with BOM.
 
-1.1.5 - 02.09.2016
+1.4.0 - 19.10.2016
 ------------------
 
-In dieser Version werden die Vorbereitungen für CartPdf getroffen, um die generierten PDFs (Bestellbestätigung und Rechnung) zu speichern.
+In dieser Version werden Datenbankfelder für Service-Attribute hinzugefügt.
 
 .. IMPORTANT::
    Es ist eine Aktualisierung der Datenbank erforderlich. Da die Felder bisher nicht benutzt wurden, sollte das in der Regel unproblematisch sein.
