--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -623,6 +623,9 @@
             <trans-unit id="tx_cart_domain_model_product_product.palette.measures">
                 <source>Measures</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.palette.service_attributes">
+                <source>Service Attributes</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.palette.stock">
                 <source>Stock</source>
             </trans-unit>
@@ -692,6 +695,15 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.measure.area">
                 <source>Area</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.service_attribute1">
+                <source>Attribute 1</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.service_attribute2">
+                <source>Attribute 2</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.service_attribute3">
+                <source>Attribute 3</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.tax_class">
                 <source>Tax Class</source>
