[TASK] #27 - add frontend user group for special price

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.5.0
+    2016-10-19
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #27: add frontend user group for special prices
+
 1.4.0
     2016-10-19
     Daniel Lorenz <daniel.lorenz@extco.de>
