--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.5.2
+    2016-11-04
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #33: prevent double submit an order with some javascript
+
 1.5.1
     2016-10-31
     Daniel Lorenz <daniel.lorenz@extco.de>
