--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.6.0
+    2016-11-08
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #29: add success and fail actions for payment provider
+
 1.5.2
     2016-11-04
     Daniel Lorenz <daniel.lorenz@extco.de>
